# KaggleMeasureAGI

./: .gitignore  README.md  pyproject.toml  run_v2_bench.py
notebooks/: adaptive_shift_kbench.py  adaptive_shift_kbench_local.py  adaptive_shift_strict_hard_kbench.py  adaptive_shift_strict_standard_kbench.py
src/adaptive_shift_bench/: __init__.py  __main__.py  claude_cli.py  claude_runner.py  codex_cli.py  codex_runner.py  engine.py  kaggle_tasks.py  llm.py  local_kaggle_mock.py  local_kaggle_runner.py  models.py  parsing.py  reporting.py  scenarios.py  strict_dataset.py
src/adaptive_shift_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_claude_cli.py  test_codex_cli.py  test_engine.py  test_kaggle_tasks.py  test_reporting.py
